Tested the IMU and adjusted all PID values accordingly.
Added rudimentary height calculation based on the merging of integrated
acceleration and velocity data with barometric pressure data. But again
the integration makes the calculations very noisy and unreliable.

--- a/RTIMULib.ini
+++ b/RTIMULib.ini
@@ -15,18 +15,18 @@
 #   6 = InvenSense MPU-9250
 #   7 = STM L3GD20H + LSM303DLHC
 #   7 = Bosch BMX055
-IMUType=0
+IMUType=7
 
 # 
 # Fusion type type - 
 #   0 - Null. Use if only sensor data required without fusion
 #   1 - Kalman STATE4
 #   2 - RTQF
-FusionType=2
+FusionType=1
 
 # 
 # Is bus I2C: 'true' for I2C, 'false' for SPI
-BusIsI2C=false
+BusIsI2C=true
 
 # 
 # I2C Bus (between 0 and 7) 
@@ -38,7 +38,7 @@ SPIBus=0
 
 # 
 # SPI select (between 0 and 1) 
-SPISelect=1
+SPISelect=0
 
 # 
 # SPI Speed in Hz
@@ -46,7 +46,7 @@ SPISpeed=500000
 
 # 
 # I2C slave address (filled in automatically by auto discover) 
-I2CSlaveAddress=0
+I2CSlaveAddress=107
 
 # 
 # IMU axis rotation - see RTIMU.h for details
@@ -59,23 +59,23 @@ AxisRotation=0
 #   3 = LPS25H
 #   4 = MS5611
 #   5 = MS5637
-PressureType=4
+PressureType=2
 
 # 
 # I2C pressure sensor address (filled in automatically by auto discover) 
-I2CPressureAddress=118
+I2CPressureAddress=119
 
 # #####################################################################
 # 
 
 # Compass calibration settings
-CompassCalValid=false
-CompassCalMinX=0.000000
-CompassCalMinY=0.000000
-CompassCalMinZ=0.000000
-CompassCalMaxX=0.000000
-CompassCalMaxY=0.000000
-CompassCalMaxZ=0.000000
+CompassCalValid=true
+CompassCalMinX=-62.018620
+CompassCalMinY=-61.068184
+CompassCalMinZ=-50.281631
+CompassCalMaxX=64.979912
+CompassCalMaxY=81.535370
+CompassCalMaxZ=56.711540
 
 # #####################################################################
 # 
@@ -88,40 +88,40 @@ compassAdjDeclination=0.000000
 # 
 
 # Compass ellipsoid calibration
-compassCalEllipsoidValid=false
-compassCalOffsetX=0.000000
-compassCalOffsetY=0.000000
-compassCalOffsetZ=0.000000
-compassCalCorr11=1.000000
-compassCalCorr12=0.000000
-compassCalCorr13=0.000000
-compassCalCorr21=0.000000
-compassCalCorr22=1.000000
-compassCalCorr23=0.000000
-compassCalCorr31=0.000000
-compassCalCorr32=0.000000
-compassCalCorr33=1.000000
+compassCalEllipsoidValid=true
+compassCalOffsetX=0.956789
+compassCalOffsetY=-0.795809
+compassCalOffsetZ=-0.635410
+compassCalCorr11=0.987525
+compassCalCorr12=-0.013690
+compassCalCorr13=0.000226
+compassCalCorr21=-0.013690
+compassCalCorr22=0.979839
+compassCalCorr23=-0.007533
+compassCalCorr31=0.000226
+compassCalCorr32=-0.007533
+compassCalCorr33=0.988215
 
 # #####################################################################
 # 
 
 # Accel calibration
-AccelCalValid=false
-AccelCalMinX=0.000000
-AccelCalMinY=0.000000
-AccelCalMinZ=0.000000
-AccelCalMaxX=0.000000
-AccelCalMaxY=0.000000
-AccelCalMaxZ=0.000000
+AccelCalValid=true
+AccelCalMinX=-1.038482
+AccelCalMinY=-1.126826
+AccelCalMinZ=-1.035686
+AccelCalMaxX=1.076614
+AccelCalMaxY=1.141430
+AccelCalMaxZ=1.103859
 
 # #####################################################################
 # 
 
 # Saved gyro bias data
-GyroBiasValid=false
-GyroBiasX=0.000000
-GyroBiasY=0.000000
-GyroBiasZ=0.000000
+GyroBiasValid=true
+GyroBiasX=-0.023756
+GyroBiasY=0.075649
+GyroBiasZ=0.006958
 
 # #####################################################################
 # 
